# poc-quarto-py

./: README.md  pyproject.toml
aplicacao/relatorio/: relatorio.html
